# trakdaw

./: .gitignore  .gitmodules  .project.toml  CMakeLists.txt  PLAN.md  README.md
examples/: arpeggiator.lua  build_session.lua  chain.lua  demo_jam.lua  emit_basics.lua  midi_probe.lua  osc_bridge.lua  panic.lua  patch_roundtrip.lua  patch_sweep.lua  play_keyboard.lua
scripts/: arrange.py  clip_launcher.lua  drunk_walk.lua  hot_test.lua  setup_windows.cmd  surge_win_smoke.lua  test_midi.lua
src/: main.cpp  web_ui.h
